# legoseq

./: .gitignore  Cargo.toml  readme.md  readme_cn.md
.github/workflows/: rust.yml
src/: aligner.rs  blockalign.rs  blockinfo.rs  lib.rs  main.rs  output.rs  readblockalign.rs  record.rs  utils.rs  wapper.rs  wasm.rs
test/: blockinfo.tsv  generate_fastq.ipynb  random.sh  run_pair_end.sh  run_pair_end_fa.sh  run_single_end.sh  template.txt  test.fa  test.fasta  test.fastq  test.sh
test/data/: blockinfo.fasta  blockinfo.tsv  template.txt  test_input.fasta  test_input.fastq
